Soucis de CSS pour aligner les images correctement mais fatigué
Modifier l'alignement si possible. Les commentaires dans le fond servent à des boutons au cas ou on retente à un moment !

--- a/Web/MANAGIS/css/style.css
+++ b/Web/MANAGIS/css/style.css
@@ -1,15 +1,65 @@
+  
 html,
 body,
 header,
+main,
 #intro{
     height: 100%;
 }
 
 #intro{
-    background: url("../img/test.jpg")no-repeat center center fixed;
+    background: url("../img/background-flou.png") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
 }
 
+.left{
+	float:left;
+	left:50px;
+	display:block;
+	width: 100%;
+
+}
+
+.right{
+	position: fixed;
+	float:right;
+	right:0;
+	z-index:-12;
+	overflow:hidden;
+	visibility: visible;
+	padding-right: 0em;
+	display:block;
+	width: 100%;
+}
+
+.titre {
+	text-shadow:0.3px 0.3px 0.3px black;
+	font-family:serif;
+	font-size:1.2em;
+}
+.text{
+	text-shadow:0.3px 0.3px 0.3px black;
+	font-family:serif;
+	font-size:1em;
+}
+
+.rounded-circle{
+	border-radius: 50%;
+}
+
+/*.bouton1{
+	bottom : 40%;
+	left : 41%;
+	position: absolute;
+	display: block;
+}
+
+.bouton2{
+	bottom : 40%;
+	right: 41%;
+	position: absolute;
+	display: block;
+}*/
